--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,11 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <div id ="porta-root"></div>
+    <div id ="portal-root"></div>
+    
+    <div id="app-root"></div>
+    <div id="modal-root"></div>
+
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
